apply section on/off function
apply section on/off function

--- a/systemcheck.conf
+++ b/systemcheck.conf
@@ -1,3 +1,8 @@
+# System Var
+
+# Standard rebooting period
+PMDATE=180  
+
 
 # file output values 
 
@@ -11,3 +16,61 @@ OUTPUT_DIR=/tmp/
 # default value is value of hostname command and current date format with Y-m-d
 OUTPUT_FILE=`hostname`_$(date '+%Y-%m-%d').log
 
+
+# Function on/off   
+# Periodical Maintenance 
+pmcheck=off
+
+# Kernel Information 
+kernelchk=off
+
+# Kdump activation check
+kdumpchk=off
+
+# Crontab job check 
+croninfo=off
+
+# Network Information check 
+networkchk=off
+
+# Route table check
+routechk=off
+
+# network protocal status check
+protocolinfo=off
+
+# disk attach status 
+diskinfo=off
+
+# Filesystem information check
+fsinfo=off
+
+# CPU usage check 
+cpuusage=off
+
+# Memoryusage check
+memoryusage=off
+
+# Memory status check
+memorystatus=off
+
+# Swap status 
+swapstatus=on
+
+# Io status 
+iostatus=off
+
+# Process check 
+pschk=off
+
+# Zombie process check
+zombiechk=off
+
+# last logined user 
+lastchk=off
+
+# error message from /var/log/messages
+errorchk=off
+
+# Dimdecode check 
+dimdecodechk=off
