--- a/systemcheck.conf
+++ b/systemcheck.conf
@@ -19,58 +19,58 @@ OUTPUT_FILE=`hostname`_$(date '+%Y-%m-%d').log
 
 # Function on/off   
 # Periodical Maintenance 
-pmcheck=off
+pmcheck=on
 
 # Kernel Information 
-kernelchk=off
+kernelchk=on
 
 # Kdump activation check
-kdumpchk=off
+kdumpchk=on
 
 # Crontab job check 
-croninfo=off
+croninfo=on
 
 # Network Information check 
-networkchk=off
+networkchk=on
 
 # Route table check
-routechk=off
+routechk=on
 
 # network protocal status check
-protocolinfo=off
+protocolinfo=on
 
 # disk attach status 
-diskinfo=off
+diskinfo=on
 
 # Filesystem information check
-fsinfo=off
+fsinfo=on
 
 # CPU usage check 
-cpuusage=off
+cpuusage=on
 
 # Memoryusage check
-memoryusage=off
+memoryusage=on
 
 # Memory status check
-memorystatus=off
+memorystatus=on
 
 # Swap status 
 swapstatus=on
 
 # Io status 
-iostatus=off
+iostatus=on
 
 # Process check 
-pschk=off
+pschk=on
 
 # Zombie process check
-zombiechk=off
+zombiechk=on
 
 # last logined user 
-lastchk=off
+lastchk=on
 
 # error message from /var/log/messages
-errorchk=off
+errorchk=on
 
 # Dimdecode check 
-dimdecodechk=off
+dimdecodechk=on
